Fixes remember me spacing on sign in.

--- a/app/assets/stylesheets/layouts/auth.scss
+++ b/app/assets/stylesheets/layouts/auth.scss
@@ -1,4 +1,9 @@
 @import 'vars';
 
 .l-auth {
+  
+  .remember-me {
+    margin-left: $gw-gutter;
+  }
+  
 }
